Fix scrollbar styles in non-firefox browsers

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -9,10 +9,22 @@
   --background-color: #120d26;
 }
 
-html {
-  background-color: var(--background-color);
+/* Handle Scrollbars in Firefox */
+* {
   scrollbar-color:  var(--primary-color) rgba(0, 0, 0, 0);
   scrollbar-width: thin;
+}
+/* Handle Scrollbars in Chrome, Safari, and Edge */
+*::-webkit-scrollbar { width: 8px; }
+*::-webkit-scrollbar-track { background: rgba(0, 0, 0, 0); }
+*::-webkit-scrollbar-thumb {
+  background-color: var(--primary-color);
+  border-radius: 10px;
+  border: none;
+}
+
+html {
+  background-color: var(--background-color);
 }
 
 body {
